test/corpus/final_dict.txt
================================================================================
Simple Dictionary
================================================================================

{"a": 1}

--------------------------------------------------------------------------------

(source_file
  (dictionary
    (pair
      (string)
      (integer))))

================================================================================
Nested Dictionary with List and Newlines
================================================================================

{
  "key": [
    1,
    2
  ],
  'nested': {
    'val': True
  }
}

--------------------------------------------------------------------------------

(source_file
  (dictionary
    (pair
      (string)
      (list
        (integer)
        (integer)))
    (pair
      (string)
      (dictionary
        (pair
          (string)
          (true))))))
